--- a/src/assets/content/content.css
+++ b/src/assets/content/content.css
@@ -1,3 +1,6 @@
+* {
+  text-align: center;
+}
 .content-list {
   list-style-type: none;
 }
